atualizando o notebook com a URL do Streamlit

--- a/notebook/deteccao-liveness-notebook-X.ipynb
+++ b/notebook/deteccao-liveness-notebook-X.ipynb
@@ -505,7 +505,7 @@
    "metadata": {},
    "source": [
     "As médias do modelo ficaram em torno de **~82%** para todos os atributos: *precisão*, *recall* e *acuracia*, o que é satisfatório para um modelo baseado em uma rede não muito densa e leve como a **ResNet50V2**. Este modelo apresentou um bom balanço entre performance no treino sem necessidade de GPU com resultados aceitáveis de acurácia e baixos falso negativos e positivos. Foram testados também neste projeto mas não foram adicionados neste notebook os modelos *VGG19*, *VGG16*, *InceptionResNetV2* e *DenseNet201*, mas que obtiveram resultados piores que *ResNet50V2* ou não performaram em treino o suficiente para ser concluído em tempo hábil sem GPU.\n",
-    "Os gráficos de acurácia e loss mostram que o *early stopping* funcionou bem na prevenção de *overfitting*."
+    "Os gráficos de acurácia e loss mostram que o *early stopping* funcionou bem na prevenção de *overfitting*, parando na época 8 quando o *loss* voltou a crescer."
    ]
   },
   {
@@ -515,15 +515,6 @@
     "## 5 Teste Fim-a-Fim\n",
     "\n",
     "Simule a operação fim-a-fim, com uma imagem de entrada forjada (foto de foto de um rosto) e outra com uma imagem de rosto, exibindo o resultado da classificação e a pontuação de cada classe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#IMPLEMENTAR"
    ]
   },
   {
@@ -544,7 +535,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Resposta**:"
+    "**Resposta**:\n",
+    "\n",
+    "URL do deploy no streamlit\n",
+    "https://detector-liveness.streamlit.app/\n",
+    "\n",
+    "Código\n",
+    "https://github.com/lazarotti/detector-liveness/blob/main/streamlit-app/liveness.py"
    ]
   },
   {
